--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,11 @@ footer {
     bottom: 0;
     font-family: 'Roboto', sans-serif;
     width: 100%;
-    padding-left: 10px;
+    padding: 10px;
 }
 
 body {
-    background-color: #344955;
+    background-color: #393939;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-size: 1.6rem;
@@ -40,7 +40,7 @@ body {
     background-color: #78A083;
     border-radius: 20px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-    padding: 2rem;
+    padding: 0.5rem;
 }
 
 .words {
@@ -69,6 +69,7 @@ body {
 }
 
 header {
+    margin-top: 20px;
     display: flex;
     align-items: center;
     position: absolute;
@@ -76,7 +77,7 @@ header {
     top: 0;
     font-size: 2rem;
     font-weight: bold;
-    color: #D7E4C0;
+    color: #fefefe;
     margin-left: 16%;
 }
 
@@ -87,4 +88,25 @@ h2 {
     color: #D7E4C0;
     text-align: center;
 
+}
+.btn-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+button {
+    padding: 10px 15px;
+    border-radius: 10px;
+    margin-top: 20px ;
+    border: none;
+    align-self: center;
+    background-color: #007BFF; /* Add some color */
+    color: white; /* White text for better visibility */
+    cursor: pointer;
+    font-size: 20px;
+}
+button:hover {
+    background-color: #0056b3; /* Darker shade on hover */
 }
